# spider_objout

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/: profiling.py
src/spider_objout/: main.py
src/spider_objout/persistent/: persistent.py
src/spider_objout/spider/: fetchcid.py  fetchdanmaku.py  fetchvid.py  parsedanmaku.py
src/spider_objout/spider/utils/: fetch.py  get-cookies.sh  getheaders.py
src/spider_objout/visualizing/: stopwords.txt  visualize.py
tests/: test_fetch.py  test_fetchcid.py  test_fetchdanmaku.py  test_fetchvid.py  test_getheaders.py  test_parsedanmaku.py  test_persistent.py  test_visualize.py
