[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spider_objout"
version = "0.0.1"
authors = [
  { name="objout", email="android-ios@qq.com" },
]
description = "Spider for Bilibili"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "protobuf==4.23.2",
  "openpyxl==3.1.2",
  "matplotlib==3.6.2",
  "numpy==1.25.2",
  "Pillow==9.2.0",
  "wordcloud==1.9.2",
  "jieba==0.42.1"
]

[project.urls]
"Homepage" = "https://github.com/objout/102102145"
"Bug Tracker" = "https://github.com/objout/102102145/issues"

[project.scripts]
spider_objout = "spider_objout.main:main"
